--- a/src/app/heroes/heroes.component.html
+++ b/src/app/heroes/heroes.component.html
@@ -1,9 +1,8 @@
 <h2>{{hero.name | uppercase}}</h2>
 <div><span>id:</span>{{hero.id}}</div>
 <div><span>name:</span>{{hero.name}}</div>
-<!-- <div>
+<div>
 	<label>
 		<input [(ngModel)]="hero.name" placeholder="name">
 	</label>
 </div>
- -->
